--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
   </div><!-- /.container-fluid -->
 </nav>
   
-    <h1>Hello, world! Template</h1>
+    <h1>Hello, world!</h1>
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
